# Email-Assistant

./: .gitignore  README.md  mypy.ini  pyproject.toml  tox.ini
python/: .env.example
python/email_assistant/utils/: environment.py
